# flashaccept

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml
cmake/: flashaccept-config.cmake.in  flashaccept.pc.in
docs/: API.md  BENCHMARKS.md
examples/: echo_server.c
harness/: config  flush-ch.sh  loop.sh  optimizer-prompt.md  run.sh  schema.sql  start-loop.sh  watch.sh
include/: flashaccept.h
kbs/: INDEX.md  conn-freelist-on-direct-champion.md  defer-taskrun-single-issuer.md  linked-reply-chain-regressed.md  teardown-redraw2.md
loadgen/: loadgen-server.py  loadgen.c
packaging/: .gitignore  README.md
packaging/aur/: .SRCINFO  PKGBUILD
research/: BENCHMARK_NUMBERS.md  README.md
research/docs/: LOADGEN_REMOTE.md
research/harness/: config  flush-ch.sh  optimizer-system.md  schema.sql  start-webui.sh
research/kbs/: INDEX.md  msg-more-coalesces-reply-fin.md
research/loadgen/: loadgen-server.py
research/results/: PROPOSALS.md
scripts/: setup-loadgen.sh
src/: flashaccept.c
treatment/: accept-treat.c
webui/: server.py
